<resources>
    <string name="app_name">Josh Skills</string>
    <string name="inbox_header">Josh Skills</string>
    <string name="welcome_josh_skill_new">welcome</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="download">Download</string>
    <string name="downloading_certificate">Downloading your certificate</string>
    <string name="downloading_complete">Downloading complete</string>
    <string name="not_now">Not Now</string>
    <string name="not_now_underline"><u>Not Now</u></string>
    <string name="settings">Settings</string>
    <string name="quiz_game">Quiz Game</string>
    <string name="build_your_team">Build your team</string>
    <string name="header_congratulation">Congratulations</string>
    <string name="name">Name</string>
    <string name="email">Email Id</string>
    <string name="gallery">Gallery</string>
    <string name="audio">Audio</string>
    <string name="camera">Camera</string>
    <string name="short_seconds">sec</string>
    <string name="volume_up_message">Please turn the volume up</string>
    <string name="storage_permission_message">To view or send media, allow Josh Skills access to your device\'s  photos, media and files.</string>
    <string name="record_permission_message">To record a Voice Message, allow Josh Skills access to your microphone and your device\'s  photos, media and files. Tap Settings > Permissions, and turn Microphone on and Storage on.</string>
    <string name="camera_permission_message">To capture photos and videos allow Josh Skills access to your camera  and your device\'s  photos, media and files.</string>
    <string name="type_message_hint">Type a message</string>
    <string name="splash_sub_string_english">Zindagi mein aage badho,\nJosh ke saath! </string>
    <string name="open">OPEN</string>
    <string name="submit">Submit</string>
    <string name="track_number">Track</string>
    <string name="play_button_description">Play button</string>
    <string name="continue_label">Continue</string>
    <string name="instagram_label">Share as reel on Instagram</string>
    <string name="info_text">You will get a video based on your recording that you can share with your friends and family</string>
    <string name="continue_label_with_arrow">Continue          -></string>
    <string name="message_size_limit">Message size limit exceeded</string>
    <string name="media_not_found_message">Sorry, this media file doesn\'t exist on your internal storage. can you download it?</string>
    <string name="pdf_desc" formatted="false">%s Page \u2022 PDF</string>
    <string name="restart">Restart</string>
    <string name="restart_now">Restart Now</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="update_message">An update has just been downloaded.</string>
    <string name="update_download_success_message">An update has just been downloaded.</string>
    <string name="restart_course_message">क्या आप कोर्स फिर से शुरू करना चाहते हैं?(आपके कमाए Points आपके पास ही रहेंगे, लेकिन Course Lesson 1 से फिर से Start होगा)</string>
    <string name="slide_to_cancel">Slide To Cancel</string>
    <string name="explore_new">Course Dekhein</string>
    <string name="explorer_courses">Explore Courses</string>
    <string name="select_courses">Select Courses</string>
    <string name="start_course">Start Course</string>
    <string name="buy_course">Buy Course</string>
    <string name="start_learning">Start Learning</string>
    <string name="paid">Paid</string>
    <string name="upgrade">Upgrade</string>
    <string name="transaction_status">Your Transaction status:</string>
    <string name="course_payment_label">Course Payment</string>
    <string name="done">Done</string>
    <string name="course_started_label">Course Started</string>
    <string name="in_progress_label">In Progress</string>
    <string name="payment_process_info">It usually takes 2&#8211;3 minutes to complete your admission process and start our classes.</string>
    <string name="find_more_courses">Find More Courses</string>
    <string name="buy_english_course">Buy English Course</string>
    <string name="add_more_courses">Add More Courses</string>
    <string name="internet_not_available_msz">Seems like your Internet is too slow or not available.</string>
    <string name="plz_wait">Please wait&#8230;</string>
    <string name="plz_wait_feedback">Please be patient \n Your feedback will be available in a few minutes.</string>
    <string name="your_mobile_number">Your Mobile Number </string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_email">Please enter valid Email Id</string>
    <string name="join_social_text">Join through your social accounts</string>
    <string name="confirm_number">Confirm your number</string>
    <string name="send_otp">Send OTP</string>
    <string name="or">OR</string>
    <string name="no_new_message_arrive">No new classes</string>
    <string name="new_message_arrive">New classes downloaded</string>
    <string name="something_went_wrong">Oops! Something Went Wrong</string>
    <string name="click_to_start_course">Click to start course</string>
    <string name="thank_you">Thank you!</string>
    <string name="time_ago_now">few moments ago</string>
    <string name="time_ago_full_seconds">%1$d seconds ago</string>
    <string name="time_ago_full_minute">%1$d minute ago</string>
    <string name="time_ago_full_minutes">%1$d minutes ago</string>
    <string name="time_ago_full_hour">%1$d hour ago</string>
    <string name="time_ago_full_hours">%1$d hours ago</string>
    <string name="time_ago_full_days">%1$d days ago</string>
    <string name="time_ago_full_month">%1$d month ago</string>
    <string name="time_ago_full_months">%1$d months ago</string>
    <string name="time_ago_seconds">%1$d sec ago</string>
    <string name="time_ago_minute">%1$d min ago</string>
    <string name="time_ago_minutes">%1$d min ago</string>
    <string name="time_ago_hour">%1$d h ago</string>
    <string name="time_ago_hours">%1$d h ago</string>
    <string name="time_ago_yesterday_at">Yesterday at %1$s</string>
    <string name="time_ago_days">%1$d d ago</string>
    <string name="time_ago_month">%1$d m ago</string>
    <string name="time_ago_months">%1$d m ago</string>
    <string name="email_address">Email Address</string>
    <string name="attach_image">Attach an image</string>
    <string name="amount">Amount</string>
    <string name="status">Status</string>
    <string name="practice">Practice</string>
    <string name="complaint_message" formatted="false">Thanks for reaching out to us. Your request has been recorded against ticket number %s. Our team will reach out to you between 24–72 hours</string>
    <string name="payment_process_success">Your payment has been processed successfully!</string>
    <string name="status_with_colon">Status : </string>
    <string name="submit_answer">Submit Answer</string>
    <string name="improve_answer">Improve Answer</string>
    <string name="today_practise">Today\'s Practice</string>
    <string name="hold_to_record_msz">Press and hold to record</string>
    <string name="upload_file_msz">Upload a file</string>
    <string name="your_answer">Your Recording</string>
    <string name="your_feedback">Your Feedback</string>
    <string name="your_submitted_answer">Your Submitted Recording</string>
    <string name="type_your_answer_hint">Type your answer here&#8230;&#8230;&#8230;</string>
    <string name="viewing_support_app_not_exist">you may have not proper app for viewing this content</string>
    <string name="login_signup">Login\/Signup</string>
    <string name="wrong_otp">The OTP entered is incorrect. Please enter correct OTP or try regenerating the OTP</string>
    <string name="refer_and_earn">Refer &amp; Earn</string>
    <string name="paise_kamao">Paise Kamao</string>
    <string name="copy_code">Referral code copied to clipboard</string>
    <string name="complete_payment">Complete Payment</string>
    <string name="bill_detail_header">Bill Details</string>
    <string name="network_type">Network Type</string>
    <string name="answer_not_submitted">Answer not submitted</string>
    <string name="answer_submitted">Practice Successfully Submitted</string>
    <string name="use_tip">Use Tip</string>
    <string name="record_answer_label">Record your answer</string>
    <string name="type_answer_label">Type your answer</string>
    <string name="upload_answer_label">Upload your answer</string>
    <string name="find_more_course_hint_ftime" formatted="false">Hello %s, Agar aap es course ke sath kuch aur bhi seekhna chahte hain to pehle %s dino mai aapke paas har course pe %s off hai </string>
    <string name="buy_course_offer_tooltip" formatted="false"> Get %s off on the next course you buy, Valid for %s days.</string>
    <string name="first_time_user_hint">Aapko apne course se related saari videos aur claases isko click karke milengi</string>
    <string name="certificate_tooltip_hint">Iss course ke lessons aur practices %s complete karne par aapko ek digital certificate milega.</string>
    <string name="course_overview">Course Overview</string>
    <string name="recording_short">The recording should be more than one second!</string>
    <string name="submit_practise_msz">Please complete your task before Submitting</string>
    <string name="generic_message_for_error">An error occurred, please try again!</string>
    <string name="referral_header" formatted="false">Do you want your friends to grow too?</string>
    <string name="share_more_text"><b>Share Knowledge, Earn Love</b></string>
    <string name="go_to_course">Go To Course</string>
    <string name="video_url_not_exist">Something went wrong! Video does not exist</string>
    <string name="volume">Volume: %1$d</string>
    <string name="brightness">Brightness: %1$d</string>
    <string name="seconds">%1$d seconds</string>
    <string name="help">Help</string>
    <string name="referral">Referral</string>
    <string name="delete">Delete</string>
    <string name="speaking">Speaking</string>
    <string name="grammar">Grammar</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="reading">Reading</string>
    <string name="rating">Rating</string>
    <string name="rate_your_practise_partner">Rate Your  Practice Partner</string>
    <string name="confidence">Confidence: </string>
    <string name="pronunciation">Pronunciation: </string>
    <string name="eagerness_to_learn">Eagerness to Learn: </string>
    <string name="was_the_respect_fullness">Was Respectful: </string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="speaking_time_msz">Speaking time\n %s minutes</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="edit">Edit Message</string>
    <string name="forward">Forward Message</string>
    <string name="reply">Reply in Message</string>
    <string name="share_message">Share a message</string>
    <string name="reply_thread">Start a Thread</string>
    <string name="copy_message">Copy Message</string>
    <string name="message_info">Message Info</string>
    <string name="end_room">End Room</string>
    <string name="alert_end_room_title">Are you sure, you want to end this room for everyone</string>
    <string name="free_trial_dialog_title">जरुरी जानकारी</string>
    <string name="free_trial_dialog_desc">यह एक 90 दिनों का कोर्स है\\nऔर try करने के बाद अगर आप चाहें तो इसे ₹499 में खरीद सकते हैं\\n  \\nक्या आप इस कोर्स को एक दिन के लिए बिल्कुल मुफ्त में try करना चाहते हैं?</string>
    <string name="free_trial_dialog_btn_no">जी नहीं</string>
    <string name="free_trial_dialog_btn_yes">जी हाँ</string>
</resources>