<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_leaderboard"
        android:actionLayout="@layout/base_toolbar"
        android:orderInCategory="100"
        android:visible="false"
        android:title="@string/leaderboard"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/menu_referral"
        android:actionLayout="@layout/base_toolbar"
        android:orderInCategory="100"
        android:title="@string/referral"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/menu_help"
        android:actionLayout="@layout/base_toolbar"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_settings"
        android:actionLayout="@layout/base_toolbar"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="collapseActionView" />
</menu>