<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/message_actions"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@drawable/rectangle_top_rounded"
    android:elevation="8dp"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/message_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/message_info"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_info" />

    <TextView
        android:id="@+id/start_thread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/reply_thread"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/reply_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/reply"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forward_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/forward"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/copy_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/copy_message"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/share_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/share_message"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/edit"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/delete_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/delete"
        android:textColor="@color/red"
        android:textStyle="bold"
        app:drawableTint="@color/red" />

</LinearLayout>
