<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.assessment.AssessmentActivity">

    <data>

        <variable
            name="handler"
            type="com.joshtalks.joshskills.ui.voip.voip_rating.VoipRatingFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="start|center"
                android:minHeight="?attr/actionBarSize"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:theme="@style/Theme.GuidelinesCompat.Light.DarkToolbar">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->handler.exitDialog()}"
                    android:paddingHorizontal="@dimen/_4sdp"
                    android:paddingVertical="@dimen/_4sdp"
                    android:visibility="visible"
                    app:srcCompat="@drawable/ic_cross"
                    app:tint="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_message_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:gravity="center_vertical|start"
                    android:paddingHorizontal="@dimen/_4sdp"
                    android:paddingVertical="@dimen/_5sdp"
                    android:singleLine="true"
                    android:text="@string/rating"
                    android:textAppearance="@style/TextAppearance.JoshTypography.Body_Text_Medium_Semi_Bold"
                    android:textColor="@color/white" />
            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_speaking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="start|center"
            android:text="@string/speaking_time_msz"
            android:textAppearance="@style/TextAppearance.JoshTypography.Heading_H6_Semi_Bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:text="Speaking time\n 5:48 minutes" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/da_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_speaking" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="start|center"
            android:text="@string/rate_your_practise_partner"
            android:textAppearance="@style/TextAppearance.JoshTypography.Body_Text_Normal_Semi_Bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />


        <com.joshtalks.joshskills.ui.voip.voip_rating.PractiseRatingView
            android:id="@+id/pr_confidence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_1"
            app:layout_constraintWidth_percent="0.8"
            app:rating_title="@string/confidence" />

        <com.joshtalks.joshskills.ui.voip.voip_rating.PractiseRatingView
            android:id="@+id/pr_grammar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pr_confidence"
            app:layout_constraintWidth_percent="0.8"
            app:rating_title="@string/grammar" />

        <com.joshtalks.joshskills.ui.voip.voip_rating.PractiseRatingView
            android:id="@+id/pr_pronunciation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pr_grammar"
            app:layout_constraintWidth_percent="0.8"
            app:rating_title="@string/pronunciation" />

        <com.joshtalks.joshskills.ui.voip.voip_rating.PractiseRatingView
            android:id="@+id/pr_eagerness_to_learn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pr_pronunciation"
            app:layout_constraintWidth_percent="0.8"
            app:rating_title="@string/eagerness_to_learn" />

        <com.joshtalks.joshskills.ui.voip.voip_rating.PractiseRatingView
            android:id="@+id/pr_was_the_respect_fullness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pr_eagerness_to_learn"
            app:layout_constraintWidth_percent="0.8"
            app:rating_title="@string/was_the_respect_fullness" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_24sdp"
            android:backgroundTint="@color/colorAccent"
            android:elevation="@dimen/_4sdp"
            android:gravity="center"
            android:onClick="@{()->handler.submitFeedback()}"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:text="@string/submit_feedback"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.JoshTypography.Button"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/_36sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pr_was_the_respect_fullness"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.6"
            app:rippleColor="@color/white" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>